--- a/index.html
+++ b/index.html
@@ -3,80 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page do Projeto PET-Saúde</title>
+    <title>Projeto PET-Saúde</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <!-- Menu Simples -->
     <header>
-        <div class = "container">
-            <div class = "logo">Logo Pet-Saúde</div>
-            <h1 id ="header-title">Informação para Ação: Desenvolvimento e implantação de soluções digitais para otimizar a comunicação e gestão da Atenção Primária à Saúde</h1>
+        <div class="container">
+            <div class="logo">PET-Saúde</div>
+            <nav>
+                <a href="#about">Sobre</a>
+                <a href="#problems">Problemas</a>
+                <a href="#how-we-operate">Atuação</a>
+                <a href="#benefits">Benefícios</a>
+                <a href="#contact">Contato</a>
+            </nav>
         </div>
     </header>
-    </div>
 
-    <section id = "about">
-        <div class = "container">
-            <h2 class = "section-title">Sobre o Projeto</h2>
-            <p class = "content">O Pet-Saude auxilia na comunicação entre as Unidades Básicas de Saúde e a população do município de Parnaíba-PI,
-            gerencia dados gerados nos atendimentos do SUS e otimiza a análise da situação de saúde
-            </p>
+    <!-- Banner Principal -->
+    <section class="banner">
+        <div class="container">
+            <h1>Informação para Ação</h1>
+            <p>Soluções digitais para a Atenção Primária à Saúde em Parnaíba-PI</p>
         </div>
     </section>
 
-    <section id = "problems">
-        <div class = "container">
-            <h2 class = "section-title">Problemas que Enfrentamos</h2>
-            <p class = "content">Atualmente o sistema de saude tem dificuldades na comunicação entre profissionais, no acesso a informações atualizadas e na tomada de decisões rápidas e eficientes
-            devido a fragmentação informacional.Alem disso informações importantes ficam dispersas devido não ter uma intregração de sistemas de dados,comprometendo o acompanhamento da saúde da população.
-            Com isso o projeto Pet-Saúde propoe soluções digitais que unificam dados, melhoram a comunicação e fortalecem a gestão em saúde pública.
-            </p>
+    <!-- Sobre o Projeto -->
+    <section id="about" class="section">
+        <div class="container">
+            <h2>Sobre o Projeto</h2>
+            <p>O PET-Saude auxilia na comunicação entre as Unidades Básicas de Saúde e a população do município de Parnaíba-PI, gerencia dados gerados nos atendimentos do SUS e otimiza a análise da situação de saúde.</p>
         </div>
     </section>
 
-    <section id = "how-we-operate">
-        <div class = "container">
-            <h2 class = "section-title">Como Atuamos</h2>
+    <!-- Problemas -->
+    <section id="problems" class="section dark">
+        <div class="container">
+            <h2>Problemas que Enfrentamos</h2>
+            <p>Atualmente o sistema de saude tem dificuldades na comunicação entre profissionais, no acesso a informações atualizadas e na tomada de decisões rápidas e eficientes devido a fragmentação informacional.</p>
+        </div>
+    </section>
+
+    <!-- Como Atuamos -->
+    <section id="how-we-operate" class="section">
+        <div class="container">
+            <h2>Como Atuamos</h2>
             <ul>
                 <li>Plataforma Digital: Desenvolvimento e implementação</li>
-                <li>Integração de Dados: Uso de informações de notificações(SINAN), doenças crônicas (e-SUS), situação vacinal e atendimentos na atenção primária.</li>
-                <li>Dashboards Interativos: Visualização de indicadores-chave, gráficos dinâmicos e mapas de distribuição.</li>
-                <li>Educação em Saúde: Compartilhamento de materiais digitais educativos e ações de educação.</li>
+                <li>Integração de Dados: Uso de informações de notificações</li>
+                <li>Dashboards Interativos: Visualização de indicadores-chave</li>
+                <li>Educação em Saúde: Compartilhamento de materiais educativos</li>
             </ul>
         </div>
     </section>
 
-    <section id = "benefits">
-        <div class = "container">
-            <h2 class = "section-title">Beneficios do Projeto</h2>
-            <p class = "content"> O projeto traz benefícios como a equidade no acesso aos serviços de saúde, especialmente em regiões com menor infraestrutura, um atendimento mais ágil, eficiente e humanizado,
-            o fortalecimento da vigilância em saúde, o aprimoramento de ações de prevenção e controle, e a democratização do conhecimento
-            </p>
+    <!-- Benefícios -->
+    <section id="benefits" class="section dark">
+        <div class="container">
+            <h2>Beneficios do Projeto</h2>
+            <p>O projeto traz benefícios como a equidade no acesso aos serviços de saúde, um atendimento mais ágil e eficiente, e o fortalecimento da vigilância em saúde.</p>
         </div>
     </section>
 
-    <section id = "collaboration">
-        <div class = "container">
-            <h2 class = "section-title">Colaboração Multidisciplinar</h2>
-            <ul>
-                <li>Bacharelado em Enfermagem</li>
-                <li>Bacharelado em Odontologia</li>
-                <li>Curso Superior de Tecnologia em Sistemas de Computação</li>
-            </ul>
+    <!-- Contato -->
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Quer saber mais?</h2>
+            <a href="#contact" class="button">Entre em contato</a>
         </div>
     </section>
 
-    <section >
-        <div class = "container">
-            <h2 class = "section-title">Quer saber mais sobre o nosso projeto?</h2>
-            <a class = "cta-button" href="" >Entre em contato</a>
-        </div>
-    </section>
-
-    <footer id = "footer">
-        <div class = "container">
-            <p>Realização: Universidade Estadual Do Piauí-UESPI | Contato: contato@pet-saude.org | Projeto PET-Saúde &copy; 2025</p>
+    <!-- Rodapé -->
+    <footer>
+        <div class="container">
+            <p>Universidade Estadual Do Piauí-UESPI | PET-Saúde &copy; 2025</p>
         </div>
     </footer>
 </body>
