--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <section id="problems" class="section dark">
         <div class="container">
             <h2>Problemas que Enfrentamos</h2>
-            <p>Atualmente o sistema de saude tem dificuldades na comunicação entre profissionais, no acesso a informações atualizadas e na tomada de decisões rápidas e eficientes devido a fragmentação informacional.</p>
+            <p>Atualmente o sistema de saude tem dificuldades na comunicação entre profissionais, no acesso a informações atualizadas e na tomada de decisões rápidas e eficientes
+            devido a fragmentação informacional.Alem disso informações importantes ficam dispersas devido não ter uma intregração de sistemas de dados,comprometendo o acompanhamento da saúde da população.
+            Com isso o projeto Pet-Saúde propoe soluções digitais que unificam dados, melhoram a comunicação e fortalecem a gestão em saúde pública.</p>
         </div>
     </section>
 
@@ -56,11 +58,23 @@
     <section id="benefits" class="section dark">
         <div class="container">
             <h2>Beneficios do Projeto</h2>
-            <p>O projeto traz benefícios como a equidade no acesso aos serviços de saúde, um atendimento mais ágil e eficiente, e o fortalecimento da vigilância em saúde.</p>
+            <p>O projeto traz benefícios como a equidade no acesso aos serviços de saúde, especialmente em regiões com menor infraestrutura, um atendimento mais ágil, eficiente e humanizado,
+            o fortalecimento da vigilância em saúde, o aprimoramento de ações de prevenção e controle, e a democratização do conhecimento</p>
         </div>
     </section>
 
-    <section id="contact" class="section">
+     <section id = "collaboration" class="section">
+        <div class = "container">
+            <h2 class = "section-title">Colaboração Multidisciplinar</h2>
+            <ul>
+                <li>Bacharelado em Enfermagem</li>
+                <li>Bacharelado em Odontologia</li>
+                <li>Curso Superior de Tecnologia em Sistemas de Computação</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="contact" class="section dark">
         <div class="container">
             <h2>Quer saber mais?</h2>
             <a href="#contact" class="button">Entre em contato</a>
