--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a href="#problems">Problemas</a>
                 <a href="#how-we-operate">Atuação</a>
                 <a href="#benefits">Benefícios</a>
+                <a href="#collaboration">Colaboração</a>
                 <a href="#contact">Contato</a>
             </nav>
         </div>
